refactored model to EN